--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tanstack/react-query": "^5.64.2",
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "linkdin": "file:..",
     "lucide-react": "^0.473.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
